--- a/roles/ans_role_prometheus/templates/prometheus.yml.j2
+++ b/roles/ans_role_prometheus/templates/prometheus.yml.j2
@@ -42,3 +42,8 @@ scrape_configs:
     # machine by default.
     static_configs:
       - targets: ['localhost:9100']
+
+  - job_name: 'servers'
+    file_sd_configs:
+      - files:
+          - /etc/prometheus/targets.yml
