--- a/roles/ans_role_prometheus/templates/targets.yml.j2
+++ b/roles/ans_role_prometheus/templates/targets.yml.j2
@@ -7,3 +7,13 @@
     env: '{{ hostvars[host].env }}'
 {% endif %}
 {% endfor %}
+
+- job_name: 'jenkins'
+  metrics_path: /prometheus/
+    scrape_interval: 300s
+    scrape_timeout: 30s
+    scheme: https
+    tls_config:
+      insecure_skip_verify: true
+    static_configs:
+      - targets: ["{{ hostvars[jenkins01].ansible_host }}:8080"]
