--- a/roles/ans_role_prometheus/templates/targets.yml.j2
+++ b/roles/ans_role_prometheus/templates/targets.yml.j2
@@ -16,4 +16,4 @@
     tls_config:
       insecure_skip_verify: true
     static_configs:
-      - targets: ["{{ hostvars[jenkins01].ansible_host }}:8080"]
+      - targets: ["{{ hostvars['jenkins01'].ansible_host }}:8080"]
