--- a/roles/ans_role_prometheus/templates/prometheus.yml.j2
+++ b/roles/ans_role_prometheus/templates/prometheus.yml.j2
@@ -47,3 +47,13 @@ scrape_configs:
     file_sd_configs:
       - files:
           - /etc/prometheus/targets.yml
+
+  - job_name: 'jenkins'
+    metrics_path: /prometheus/
+      scrape_interval: 300s
+      scrape_timeout: 30s
+      scheme: https
+      tls_config:
+        insecure_skip_verify: true
+      static_configs:
+        - targets: ["{{ hostvars['jenkins01'].ansible_host }}:8080"]
