add robot to promehteus

--- a/roles/ans_role_prometheus/templates/prometheus.yml.j2
+++ b/roles/ans_role_prometheus/templates/prometheus.yml.j2
@@ -57,3 +57,7 @@ scrape_configs:
       insecure_skip_verify: true
     static_configs:
       - targets: ["{{ hostvars['jenkins01'].ansible_host }}:8080"]
+
+  - job_name: 'robot-shop-containers'
+    static_configs:
+      - targets: ["{{ hostvars['webserver03'].ansible_host }}:8081"]
