--- a/roles/ans_role_otel/templates/otel-config.yaml.j2
+++ b/roles/ans_role_otel/templates/otel-config.yaml.j2
@@ -18,7 +18,7 @@ processors:
 
 exporters:
   otlp:
-    endpoint: "{{ hostvars['supervision']['ansible_host'] }}:4317"
+    endpoint: "{{ hostvars['supervision'].ansible_host }}:4317"
     tls:
       insecure: true
 
