--- a/roles/ans_role_loki/templates/loki-config.yaml.j2
+++ b/roles/ans_role_loki/templates/loki-config.yaml.j2
@@ -31,15 +31,7 @@ limits_config:
   reject_old_samples: true
   reject_old_samples_max_age: 168h
 
-# On déplace l'activation OTLP ici
-# Si la version 3.0.0 refuse toujours le bloc 'otlp',
-# Loki v3 l'active souvent par défaut via le endpoint /otlp
-otlp:
-  protocols:
-    http:
-      enabled: true
-
+# Le bloc OTLP est supprimé car il est natif en V3
+# Le bloc Compactor est simplifié au maximum
 compactor:
   working_directory: /tmp/loki/compactor
-  # Correction ici : 'shared_store' -> 'storage_type'
-  storage_type: filesystem
